[project]
name = "mackup"
version = "0.9.5"
description = "Backup and keep your application settings in sync."
readme = "README.md"
dependencies = [
    "docopt-ng>=0.9.0",
]
requires-python = ">= 3.9"
authors = [
	{ name = "Laurent Raufaste", email = "analogue@glop.org" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.scripts]
mackup = "mackup.main:main"

[project.urls]
Repository = "https://github.com/lra/mackup.git"
Issues = "https://github.com/lra/mackup/issues"
Changelog = "https://github.com/lra/mackup/releases"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "docopt"
ignore_missing_imports = true

[tool.coverage.run]
source = ["mackup"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = ["tests"]
pythonpath = ["."]
