[project]
name = "mackup"
version = "0.10.1"
description = "Backup and keep your application settings in sync."
readme = "README.md"
dependencies = [
    "docopt-ng>=0.9.0",
]
requires-python = ">= 3.9"
authors = [
	{ name = "Laurent Raufaste", email = "analogue@glop.org" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.scripts]
mackup = "mackup.main:main"

[project.urls]
Repository = "https://github.com/lra/mackup.git"
Issues = "https://github.com/lra/mackup/issues"
Changelog = "https://github.com/lra/mackup/releases"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
    "mypy>=1.13.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.coverage.run]
source = ["src/mackup"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest]
strict = true
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra"]

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "E", # pycodestyle error
    "EXE",  # flake8-executable
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FLY", # flynt, for f-strings
    "FURB", # refurb
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PERF", # perflint
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint error
    "PLR", # pylint refactor
    "PLW", # pylint warning
    "PT", # flake8-pytest-style
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # ruff
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle warning
]
ignore = [
    "C901", # mccabe complexity - too complex functions
    "COM812", # trailing comma missing - conflicts with formatter
    "FA100", # future annotations - would change behavior
    "INP001", # implicit namespace package - tests don't need __init__.py
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR1714", # repeated equality comparison
    "PLW2901", # loop variable overwritten
    "PT009", # use pytest.raises - existing unittest style
    "PT027", # use pytest.raises - existing unittest style
    "PTH", # use pathlib - os.path is fine for this codebase
    "SIM115", # use context manager for open - some cases require this
    "SLF001", # private member access - needed for testing
]
